# lib-napi-add-v2

./: .gitignore  Cargo.toml  README.md  browser.js  index.d.ts  index.js  lib-embed-distance.wasi-browser.js  lib-embed-distance.wasi.cjs  lib-napi-add-v2.wasi-browser.js  lib-napi-add-v2.wasi.cjs  package.json
.github/workflows/: CI.yml
