[package]
edition = "2021"
name = "lib-napi-add-v2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.16.17"
napi-derive = "2.16.13"

[build-dependencies]
napi-build = "2.2.1"

[profile.release]
lto = true
codegen-units = 1
